# latent-consensus-networks

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-02-19-lcn-design.md  2026-02-20-lcn-implementation-plan.md  2026-02-20-lcn-phase2-design.md  2026-02-23-lcn-phase3-design.md  2026-02-23-lcn-phase3-implementation.md
docs/research/: 2026-02-19-lcn-literature-review.md
experiments/: __init__.py  run_asch.py  run_experiment.py  run_hidden_profile.py  run_wisdom.py
lcn/: __init__.py
lcn/configs/: __init__.py  asch.yaml  default.yaml  hidden_profile.yaml  qwen35_4b.yaml  qwen35_4b_smoke.yaml  wisdom.yaml
lcn/core/: __init__.py  agent.py  attention.py  consensus.py  kv_cache.py  results.py
lcn/environments/: __init__.py  asch_conformity.py  base.py  hidden_profile.py  wisdom_crowds.py
lcn/models/: __init__.py  latent_ops.py  model_wrapper.py
lcn/utils/: __init__.py  metrics.py
scripts/: run_qwen35_smoke.sh
tests/: test_agent.py  test_attention.py  test_consensus.py  test_environments.py  test_hidden_profile.py  test_integration.py  test_kv_cache.py  test_model_wrapper.py  test_run_experiment.py
